# CodeDescriber

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: cli.rs  config.rs
src/common/: utils.rs
src/core/: search_files.rs
src/service/: extract_describe_text.rs  search_files.rs  xlsx_service.rs
src/shared/: utils.rs
tests/: test_search_files.rs
tests/test_data/: test.md  test.txt
