[package]
name = "code_describer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
dirs = "5.0.1"
regex = "1.10.2"
clap = { version = "4.4.11", features = ["derive"] }
xlsxwriter = "0.6.0"